src/objects/inscor__Alternate__c.object
<CustomObject>
    <fields>
        <fullName>inscor__Alternate_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Alternate Part Number</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Alternates</relationshipLabel>
        <relationshipName>Alternates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Authority__c</fullName>
        <label>Authority</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>inscor__Company__c</referenceTo>
        <relationshipLabel>Alternates</relationshipLabel>
        <relationshipName>Alternates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Conversion_ID__c</fullName>
        <label>Conversion ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Description__c</fullName>
        <label>Description</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>inscor__External_Reference_ID__c</fullName>
        <externalId>true</externalId>
        <label>External Reference ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>inscor__Primary_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Part Number</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Alternates (Primary Part Number)</relationshipLabel>
        <relationshipName>Alternates1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reference</label>
        <referenceTo>inscor__Alternate__c</referenceTo>
        <relationshipLabel>Alternates</relationshipLabel>
        <relationshipName>Alternates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Relationship_New__c</fullName>
        <description>Relationship New Field</description>
        <label>Relationship</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>inscor__Relationship</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Relationship_Other_Side__c</fullName>
        <label>Relationship For Other Side</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>inscor__Relationship</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Relationship__c</fullName>
        <label>Relationship - RETIRED</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Is Interchangeable</fullName>
                </value>
                <value>
                    <fullName>Is NOT Interchangeable</fullName>
                </value>
                <value>
                    <fullName>Superseded By</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Show_both_sides_in_Part_Research__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>If checked, an additional record will be created with the Primary and Alternate Part Number reversed.</inlineHelpText>
        <label>Create Records for Both Sides?</label>
        <type>Checkbox</type>
    </fields>
    <label>Alternate</label>
    <listViews>
        <fullName>inscor__All</fullName>
        <columns>NAME</columns>
        <columns>inscor__Primary_Product__c</columns>
        <columns>inscor__Alternate_Product__c</columns>
        <columns>inscor__Authority__c</columns>
        <columns>inscor__External_Reference_ID__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AID-{0}</displayFormat>
        <label>Alternate ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Alternates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>